--- a/stylesheets/css.css
+++ b/stylesheets/css.css
@@ -39,6 +39,12 @@ body {
 	padding:50px 50px 0px 50px;
 	text-align: center;
 }
+
+a.active {
+
+background-color: slategray;
+}
+
 .wrapper {
 	max-width: 100%;
 	box-sizing: border-box;
@@ -47,7 +53,7 @@ body {
 	height: auto;
 }
 .navigationwrapper {
-	background: #333333; 
+	background: #333333;
 }
 .infobox {
 	box-sizing: border-box;
@@ -60,15 +66,16 @@ body {
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
+	max-height: auto;
 	background-position: bottom;
-	
+
 	padding: 50px 50px 0px 50px;
 }
 .logo {
 	box-sizing: border-box;
 	height: 25%;
 	max-width: 100%;
-	
+
 }
 .infocontent {
 	box-sizing: border-box;
@@ -103,11 +110,11 @@ footerleft {
 }
 footermiddle{
 	box-sizing: border-box;
-	width: 33%;	
+	width: 33%;
 }
 footerright {
 	box-sizing: border-box;
-	width: 33%;	
+	width: 33%;
 }
 /* TEAM */
 
@@ -115,11 +122,11 @@ footerright {
 	box-sizing: border-box;
 	max-width: 100%;
 	height: auto;
-	
+
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	
+
 	background-color: rgba(255, 255, 255, 0.7);
 	}
 .teammember {
@@ -132,11 +139,12 @@ footerright {
 	padding: 0 20px;
 }
 .teaminfo{
-	max-width: 100%;	
+	max-width: 100%;
 	padding: 0 20px;
 }
 
-/*Event*/
+/*Event */
+}
 	.eventbox {
 	max-width: 100%;
 	padding: 30px 0;
@@ -147,13 +155,13 @@ footerright {
 	padding: 0 20px;
 }
 .eventinfo{
-	max-width: 100%;	
+	max-width: 100%;
 	padding: 0 20px;
 }
 
-/* Index*/
+/* Index */
 
-.content { 
+.content {
 	box-sizing: border-box;
 	max-width: 100%;
 	height: 100%;
@@ -163,7 +171,7 @@ footerright {
 }
 
 /* Kontaktformular */
-.contactwrapper { 
+.contactwrapper {
 	box-sizing: border-box;
 	max-width: 100%;
 	height: 100%;
@@ -184,7 +192,7 @@ footerright {
 	height: auto;
 }
 #googlemap {
-	width: 450px; 
+	width: 450px;
 	height: 95.5%;
 }
 .contactform {
@@ -197,10 +205,10 @@ footerright {
 	width: 100%;
 	}
 
-	
+
 /* Style inputs with type="text", select elements and textareas */
 input[type=text], [type=email], [type=number], select, textarea {
-    padding: 12px; /* Some padding */  
+    padding: 12px; /* Some padding */
     border: 1px solid #ccc; /* Gray border */
     border-radius: 4px; /* Rounded borders */
     box-sizing: border-box; /* Make sure that padding and width stays in place */
@@ -424,9 +432,9 @@ input[type=submit]:hover {
 }
 
 @media all and (max-width: 768px), only screen and (-webkit-min-device-pixel-ratio: 2) and (max-width: 1024px), only screen and (min--moz-device-pixel-ratio: 2) and (max-width: 1024px), only screen and (-o-min-device-pixel-ratio: 2/1) and (max-width: 1024px), only screen and (min-device-pixel-ratio: 2) and (max-width: 1024px), only screen and (min-resolution: 192dpi) and (max-width: 1024px), only screen and (min-resolution: 2dppx) and (max-width: 1024px) {
-	
-	p {
 
+	p {
+		font-size: none;
 	}
 	.navigationwrapper {
 	padding: 0;
@@ -445,7 +453,7 @@ input[type=submit]:hover {
 }
 .logo {
 	max-height: 25%;
-	
+
 }
 .infocontent {
 	height: auto;
@@ -458,10 +466,10 @@ footerleft {
 	width: 100%;
 }
 footermiddle{
-	width: 100%;	
+	width: 100%;
 }
 footerright {
-	width: 100%;	
+	width: 100%;
 }
 	.contactleft {
 		max-width: 100%;
@@ -475,7 +483,7 @@ footerright {
 	.contactright {
 		max-width: 100%;
 	}
-	.contactwrapper { 
+	.contactwrapper {
 	flex-direction:column-reverse;
 }
 	.textbox {
@@ -490,16 +498,16 @@ footerright {
 	padding: 0;
 }
 	.eventinfo{
-	max-width: 100%;	
+	max-width: 100%;
 	padding: 0 20px;
 }
 
 #googlemap {
-	width: 100%; 
+	width: 100%;
 	height: 100%;
 }
 	/* Mobil navigation */
-	
+
 	#cssmenu {
     width: 100%;
   }
