--- a/stylesheets/css.css
+++ b/stylesheets/css.css
@@ -39,6 +39,11 @@ body {
 	padding:50px 50px 0px 50px;
 	text-align: center;
 }
+
+.active{
+
+	background-color: slategray;
+}
 .wrapper {
 	max-width: 100%;
 	box-sizing: border-box;
